--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-validator": "^6.13.0",
     "fcm-node": "^1.6.1",
     "firebase-admin": "^10.0.0",
+    "handlebars-helpers": "^0.10.0",
     "mongoose": "^6.0.12",
     "node-fetch": "^2.6.1"
   },
